--- a/MemoryLang/package.json
+++ b/MemoryLang/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "Jacob A. Torres",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
