--- a/MemoryLang/package.json
+++ b/MemoryLang/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "typescript": "^5.8.3"
   }
 }
