--- a/MemoryLang/package.json
+++ b/MemoryLang/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "mongoose": "^8.15.0",
     "typescript": "^5.8.3"
   }
 }
