--- a/MemoryLang/package.json
+++ b/MemoryLang/package.json
@@ -10,8 +10,17 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.15.21",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
